unpackaged/main/default/objects/Time_Entry__c/Time_Entry__c.object-meta.xml
<CustomObject>
    <label>Time Entry</label>
    <nameField>
        <displayFormat>TE-{000000}</displayFormat>
        <label>Time Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>