unpackaged/main/default/objects/Time_Entry__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Check-In</fullName>
            </value>
            <value>
                <fullName>Check-Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>