unpackaged/main/default/objects/Time_Entry__c/fields/Hours_Checked_In_Running__c.field-meta.xml
<CustomField>
    <fullName>Hours_Checked_In_Running__c</fullName>
    <formula>IF( Hours_Checked_In__c=0, (NOW() - LastModifiedDate)*24, Hours_Checked_In__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Hours Checked-In</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>