unpackaged/main/default/objects/Time_Entry__c/fields/IsWeekend__c.field-meta.xml
<CustomField>
    <fullName>IsWeekend__c</fullName>
    <formula>IF(OR(MOD( DATEVALUE(Action_Time__c) - DATE(1900, 1, 6), 7)=0,MOD( DATEVALUE(Action_Time__c) - DATE(1900, 1, 6), 7)=1),TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsWeekend?</label>
    <type>Checkbox</type>
</CustomField>