unpackaged/main/default/objects/Time_Entry__c/fields/Total_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Time__c</fullName>
    <label>Total Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>